force-app/main/default/objects/Product2/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Identificador Externo del CRM Actual. Se utiliza solo para la carga inicial</description>
    <externalId>true</externalId>
    <label>Id. Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>