force-app/main/default/objects/Product2/fields/ImpuestosDia__c.field-meta.xml
<CustomField>
    <fullName>ImpuestosDia__c</fullName>
    <description>Impuestos por día</description>
    <label>Impuestos por día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>