force-app/main/default/objects/Product2/fields/ImpuestosUnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>ImpuestosUnidadMedida__c</fullName>
    <description>Impuestos por unidad de medida</description>
    <label>Impuestos por Unidad de Medida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>