force-app/main/default/objects/Product2/fields/PrecioBaseCDSinManutencionSinIVA__c.field-meta.xml
<CustomField>
    <fullName>PrecioBaseCDSinManutencionSinIVA__c</fullName>
    <description>Precio producto base CD sin manutención y sin IVA</description>
    <label>Precio base CD sin manutención y sin IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>