force-app/main/default/objects/Product2/fields/PrecioDiarioIVA__c.field-meta.xml
<CustomField>
    <fullName>PrecioDiarioIVA__c</fullName>
    <description>Precio diario con IVA</description>
    <label>Precio diario con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>