force-app/main/default/objects/Product2/fields/PrecioDiarioSinIVA__c.field-meta.xml
<CustomField>
    <fullName>PrecioDiarioSinIVA__c</fullName>
    <description>Precio diario sin IVA</description>
    <label>Precio diario sin IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>