force-app/main/default/objects/Product2/fields/PrecioSinIVAUnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>PrecioSinIVAUnidadMedida__c</fullName>
    <description>Precio sin Iva por Unidad de medida</description>
    <label>Precio sin IVA Unidad de Medida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>