force-app/main/default/objects/Product2/fields/salesforceID__c.field-meta.xml
<CustomField>
    <fullName>salesforceID__c</fullName>
    <description>Este ID de Salesforce archivado almacena un ID de registro de Salesforce de 18 dígitos</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>salesforceID</label>
    <type>Text</type>
</CustomField>